--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   
   <div class="grid-container">
     <model-viewer class="a" 
-     src="./assets/model/Aunt.glb"
-     ios-src="./assets/model/Aunt.reality"
+     src="./assets/model/Aunt_anim.glb"
+     ios-src="./assets/model/Aunt_anim.reality"
      ar ar-modes="webxr scene-viewer quick-look"
      camera-controls 
      camera-target
