--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <model-viewer class="a" 
      src="./assets/model/Aunt_anim.glb"
      ios-src="./assets/model/Aunt_anim.reality"
-     ar ar-modes="webxr scene-viewer quick-look"
+     ar ar-modes="scene-viewer webxr quick-look"
      camera-controls 
      camera-target
      camera-orbit
