--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
     <model-viewer class="a" 
      src="./assets/model/Aunt_anim.glb"
      ios-src="./assets/model/Aunt_anim.reality"
-     ar ar-modes="scene-viewer webxr quick-look"
+     ar ar-modes="webxr scene-viewer quick-look"
      camera-controls 
      camera-target
      camera-orbit
      poster="./assets/image/loading4.gif" 
-     exposure="1.5"
-     ar-modes="webxr scene-viewer quick-look"
+     exposure="1"
      quick-look-browsers="safari chrome" 
      id="model-viewer"
      ar-status="not-presenting" 
