--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
   
   <div class="grid-container">
     <model-viewer class="a" 
-     src="./assets/model/Aunt_anim.glb"
-     ios-src="./assets/model/Aunt_anim.reality"
+     src="assets/model/Aunt_anim_V13.glb"
+     ios-src="assets/model/Aunt_anim.reality"
      ar ar-modes="webxr scene-viewer quick-look"
      camera-controls 
      camera-target
      camera-orbit
-     poster="./assets/image/loading4.gif" 
+     poster="assets/image/loading4.gif" 
      exposure="1"
      quick-look-browsers="safari chrome" 
      id="model-viewer"
      ar-status="not-presenting" 
      autoplay>
-    <input slot="ar-button" class="ar-button" value="submit" type="image" src="./assets/image/ariconsiyah.png" width="30px" height="30px"> 
+    <input slot="ar-button" class="ar-button" value="submit" type="image" src="assets/image/ariconsiyah.png" width="30px" height="30px"> 
     </model-viewer>
 
     <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
