--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <title>Model Viewer</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <title>&lt;model-viewer&gt; template</title>
+    <meta charset="utf-8">
+    <meta name="description" content="&lt;model-viewer&gt; template">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" href="assets/css/styles.css" rel="stylesheet"/>
+    <!-- OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
+    <script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
   </head>
-<body>
-  <div class="grid-container">
+  <body>
+    <!-- <model-viewer> HTML element -->
     <model-viewer 
+    bounds="tight" 
     src="assets/model/Aunt_anim_V14.glb" 
-    ar ar-modes="webxr scene-viewer quick-look"
+    ar ar-modes="webxr scene-viewer quick-look" 
     camera-controls 
-    environment-image="neutral" 
-    poster="assets/image/poster.webp" 
-    shadow-intensity="1" 
-    autoplay 
     camera-orbit="180deg 75deg auto"
-    >
-    <input slot="ar-button" class="ar-button" value="submit" type="image" src="assets/image/ariconsiyah.png" width="30px" height="30px"> 
-  </model-viewer>
-    <script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script>
-    <script src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script>
-    <script src="https://unpkg.com/fullscreen-polyfill/dist/fullscreen.polyfill.js"></script>
-    <script src="https://unpkg.com/focus-visible/dist/focus-visible.js" defer></script>
+    environment-image="neutral" 
+    poster="assets/image/poster.webp"
+    shadow-intensity="1" 
+    autoplay>
+
+      <div class="progress-bar hide" slot="progress-bar">
+          <div class="update-bar"></div>
+      </div>
+      <button slot="ar-button" id="ar-button">
+          View in your space
+      </button>
+      <div id="ar-prompt">
+          <img src="assets/image/ar_hand_prompt.png">
+      </div>
+    </model-viewer>  
+    <script src="assets/js/script.js"></script>
+    <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-  </div>
-</body></html>
+  </body>
+</html>
